# ale-env

./: .gitignore  .gitmodules  .python-version  Cargo.toml  README.md  build.rs  pyproject.toml  single_atari_example.py  vec_atari_example.py
examples/: screenshots.rs
scripts/: convert_frames_to_video.sh  download_roms.sh
src/: atari.rs  bindings.rs  lib.rs  vec_atari.rs
tests/: test_atari.rs
